레트로핏 안쓰고 파싱 성공 if else 까지 성공 인천/서울1호선까지 IFELSE

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
         <activity
             android:name=".activites.MainActivity"
             android:exported="false" />
+
+        <meta-data
+            android:name="com.kakao.vectormap.APP_KEY"
+            android:value="dd61ec33e5b89e5120492c04a3929da9"/>
     </application>
 
 </manifest>
